[9c48d997b23dab90bf2ab1a936b2d9b1842955f7]: Update 2019-07-10-solucao-omni.md

--- a/en/manual/solucao-omni.html
+++ b/en/manual/solucao-omni.html
@@ -5389,6 +5389,118 @@
 </span><span class="p">}</span><span class="w">
 </span></code></pre></div></div>
 
+<table>
+  <thead>
+    <tr>
+      <th>Property</th>
+      <th>Type</th>
+      <th>Size</th>
+      <th>Required</th>
+      <th>Description</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><code class="highlighter-rouge">MerchantId</code></td>
+      <td>String</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Store identifier in Cielo.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">TerminalId</code></td>
+      <td>String</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Terminal tdentifier.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Acquirer.EnableContaclessCardReader</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Enables contactless card reader.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Acquirer.LockAppFunctionsExceptInitialization</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Block application functions, except for the boot.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Acquirer.HasChipReader</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Indicates that has a chip card reader</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Acquirer.HasMagneticTrackReader</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Indicates that has a magnetic track reader</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Acquirer.HasKeyboard</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Indicates that has a keyboard for typing</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Merchant.MerchantId</code></td>
+      <td>String</td>
+      <td>—</td>
+      <td>—</td>
+      <td>PayStore merchant code, defined at the time of the merchant creation.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Merchant.NetworkName</code></td>
+      <td>String</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Network name of the sub-purchaser registered by the PayStore Manager.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Merchant.MerchantName</code></td>
+      <td>String</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Merchant’s social name, defined at the time of its creation on the PayStore portal.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Merchant.MerchantAddress</code></td>
+      <td>String</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Merchant address obtained from entering the zip code at the time of its creation on the PayStore portal.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Merchant.NationalId</code></td>
+      <td>String</td>
+      <td>—</td>
+      <td>—</td>
+      <td>CPF or CNPJ, defined at the time of creation of the merchant on the PayStore portal.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Bins.InitialBin</code></td>
+      <td>String</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Starts of BIN’s range.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Bins.FinalBin</code></td>
+      <td>String</td>
+      <td>—</td>
+      <td>—</td>
+      <td>End of BIN’s range.</td>
+    </tr>
+  </tbody>
+</table>
+
 </div>
 
 
