[71732e15754b9668bce5733e6ce0ad4f8cee49ab]: Update 2019-07-10-solucao-omni.md

--- a/manual/solucao-omni.html
+++ b/manual/solucao-omni.html
@@ -5526,7 +5526,7 @@
       <td>Booleano</td>
       <td>—</td>
       <td>—</td>
-      <td>Permite carga de moedeiro a partir de dinheiro em espécie em espécie.</td>
+      <td>Permite carga de moedeiro a partir de dinheiro em espécie.</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Bins.AllowPurchaseWithCompreESaque</code></td>
