[8ad6e309c9d84d52fbb41bc86907f5cbbe2fb383]: Update 2019-07-10-solucao-omni.md

--- a/en/manual/solucao-omni.html
+++ b/en/manual/solucao-omni.html
@@ -5757,6 +5757,125 @@
       <td>—</td>
       <td>Admits the following values <br />0 - CREDIT <br />1 – DEBIT</td>
     </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Products.BrandId</code></td>
+      <td>String</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Card brand identifier.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Products.AllowTransactionWithContactlessCard</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allows contactless card transaction.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Products.IsFinancialProduct</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Financial product.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Products.AllowOfflineAuthorizationForEMVCard</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allows EMV offline authorization.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Products.AllowReprintReceipt</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allows the receipt reprint.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Products.AllowPrintReceipt</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allows the receipt printing.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Products.AllowOfflineAuthorizationForContactlessCard</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allows offline authorization for contactless card.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Products.AllowCancel</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allow cancellation.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Products.AllowUndo</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allow depletion.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Products.AllowCaptureOfFirstInstallmentValue</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allows capturing the value of the first installment.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Products.AllowCaptureOfDownpaymentValue</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allows capture of the input value.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Products.AllowGuaranteeHandling</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allows guarantee treatment.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Products.AllowPostdatingTheFirstInstallmentForSaleAndCDCQuery</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allows you to pre-date the first installment for sale and the CDC consultation.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Products.AllowPostdating</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allows pre-dating.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Products.AllowCDCSale</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allows CDC selling.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Products.AllowFinancingByStore</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allows financing by the store</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Products.AllowFinancingByCreditCardCompany</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allows financing by the Administrator.</td>
+    </tr>
   </tbody>
 </table>
 
