[8405e6ba4d59ee16824b0cc2b24cb7f1e2a6ebed]: Update 2019-07-10-solucao-omni.md

--- a/en/manual/solucao-omni.html
+++ b/en/manual/solucao-omni.html
@@ -6065,6 +6065,97 @@
       <td>—</td>
       <td>—</td>
     </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Parameters.AllowFallbackWhenChipReadingFails</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allows fallback if Chip read error.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Parameters.AllowChargingMoedeiroFromCash</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allows coin load from cash money.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Parameters.AllowPurchaseWithCompreESaque</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allows sale with Buy &amp; Withdraw.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Parameters.AllowOfflineFunctionExceptForEMVCard</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allows offline function except EMV card.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Parameters.AllowTypingCardNumber</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allows manual entry of card number.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Parameters.MaskCardNumberUsingLast4Digits</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Print only the last 4 digits of the card.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Parameters.MaskCardNumberUsingFirst6AndLas4Digits</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Print the first 6 and last 4 digits of the card.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Parameters.AllowPrintCardHolderBalance</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allows you to print the balance of the holder.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Parameters.AllowDisplayCardHolderBalance</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allows the holder balance to be displayed.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Parameters.AllowPrintingPartialCardNumberInReceipt</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allows partial printing of card number on transaction receipt.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Parameters.RestrictSaleWithDuplicateValueWhenPostdated</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Prevents duplicate value sales for pre-dating.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Parameters.RestrictSaleWithDuplicateValue</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Prevents sale with duplicate value.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Parameters.RequiresPassword</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Request password.</td>
+    </tr>
   </tbody>
 </table>
 
