[1a2dc96baafa6e9361cbf50613156043c1f3990d]: Update 2019-07-10-solucao-omni.md

--- a/en/manual/solucao-omni.html
+++ b/en/manual/solucao-omni.html
@@ -6156,6 +6156,83 @@
       <td>—</td>
       <td>Request password.</td>
     </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Parameters.InterpretsLastDigitOfSecurityCode</code></td>
+      <td>Booleano</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Interprets the last digit of the service code.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Parameters.RequiresPasswordExceptForEMVCard</code></td>
+      <td>Booleano</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Request password, except for EMV card.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Parameters.EnableAdditionalSecurityCodeOptions_Unreadable_NoCode</code></td>
+      <td>Booleano</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Enables “Unreadable/Ilegível” and “Does Not Have/Não Possui” options for Security Code.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Parameters.RequiresSecurityCodeWhenMagneticTrackIsRead</code></td>
+      <td>Booleano</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Request security code on the track reading.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Parameters.RequiresSecurityCodeWhenCardNumberIsTyped</code></td>
+      <td>Booleano</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Request security code for card typed.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Parameters.RequiresTypingLast4Digits</code></td>
+      <td>Booleano</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Request the last 4 digits typed.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Parameters.CapturesServiceFee</code></td>
+      <td>Booleano</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Service fee capture.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Parameters.AllowCancellationWithValueGreaterThanTheValueOfTheSale</code></td>
+      <td>Booleano</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allows cancellation value higher than the original sale value.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Parameters.CaptureBoardingFee</code></td>
+      <td>Booleano</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Capture of the boarding fee.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Issuers.IssuerId</code></td>
+      <td>integer int32</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Issuer identifier.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Issuers.IssuerName</code></td>
+      <td>String</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Issuer’s name.</td>
+    </tr>
   </tbody>
 </table>
 
