--- a/en/manual/solucao-omni.html
+++ b/en/manual/solucao-omni.html
@@ -6178,6 +6178,14 @@
       <td> </td>
     </tr>
     <tr>
+      <td><code class="highlighter-rouge">Parameters.AllowChargingMoedeiroFromCash</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allows coin load from cash money.</td>
+      <td> </td>
+    </tr>
+    <tr>
       <td><code class="highlighter-rouge">Parameters.AllowPurchaseWithCompreESaque</code></td>
       <td>Boolean</td>
       <td>—</td>
@@ -6267,7 +6275,7 @@
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Parameters.InterpretsLastDigitOfSecurityCode</code></td>
-      <td>Booleano</td>
+      <td>Boolean</td>
       <td>—</td>
       <td>—</td>
       <td>Interprets the last digit of the service code.</td>
@@ -6275,7 +6283,7 @@
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Parameters.RequiresPasswordExceptForEMVCard</code></td>
-      <td>Booleano</td>
+      <td>Boolean</td>
       <td>—</td>
       <td>—</td>
       <td>Request password, except for EMV card.</td>
@@ -6283,7 +6291,7 @@
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Parameters.EnableAdditionalSecurityCodeOptions_Unreadable_NoCode</code></td>
-      <td>Booleano</td>
+      <td>Boolean</td>
       <td>—</td>
       <td>—</td>
       <td>Enables “Unreadable/Ilegível” and “Does Not Have/Não Possui” options for Security Code.</td>
@@ -6291,7 +6299,7 @@
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Parameters.RequiresSecurityCodeWhenMagneticTrackIsRead</code></td>
-      <td>Booleano</td>
+      <td>Boolean</td>
       <td>—</td>
       <td>—</td>
       <td>Request security code on the track reading.</td>
@@ -6299,7 +6307,7 @@
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Parameters.RequiresSecurityCodeWhenCardNumberIsTyped</code></td>
-      <td>Booleano</td>
+      <td>Boolean</td>
       <td>—</td>
       <td>—</td>
       <td>Request security code for card typed.</td>
@@ -6307,7 +6315,7 @@
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Parameters.RequiresTypingLast4Digits</code></td>
-      <td>Booleano</td>
+      <td>Boolean</td>
       <td>—</td>
       <td>—</td>
       <td>Request the last 4 digits typed.</td>
@@ -6315,7 +6323,7 @@
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Parameters.CapturesServiceFee</code></td>
-      <td>Booleano</td>
+      <td>Boolean</td>
       <td>—</td>
       <td>—</td>
       <td>Service fee capture.</td>
@@ -6323,7 +6331,7 @@
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Parameters.AllowCancellationWithValueGreaterThanTheValueOfTheSale</code></td>
-      <td>Booleano</td>
+      <td>Boolean</td>
       <td>—</td>
       <td>—</td>
       <td>Allows cancellation value higher than the original sale value.</td>
@@ -6331,7 +6339,7 @@
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Parameters.CaptureBoardingFee</code></td>
-      <td>Booleano</td>
+      <td>Boolean</td>
       <td>—</td>
       <td>—</td>
       <td>Capture of the boarding fee.</td>
@@ -6355,7 +6363,7 @@
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Issuers.AllowFallbackWhenChipReadingFails</code></td>
-      <td>Booleano</td>
+      <td>Boolean</td>
       <td>—</td>
       <td>—</td>
       <td>Allows fallback if Chip read error.</td>
@@ -6363,7 +6371,7 @@
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Issuers.AllowChargingMoedeiroFromCash</code></td>
-      <td>Booleano</td>
+      <td>Boolean</td>
       <td>—</td>
       <td>—</td>
       <td>Allows coin load from cash money.</td>
@@ -6371,7 +6379,7 @@
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Issuers.AllowPurchaseWithCompreESaque</code></td>
-      <td>Booleano</td>
+      <td>Boolean</td>
       <td>—</td>
       <td>—</td>
       <td>Allows sale with Buy &amp; Withdraw.</td>
@@ -6379,7 +6387,7 @@
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Issuers.AllowOfflineFunctionExceptForEMVCard</code></td>
-      <td>Booleano</td>
+      <td>Boolean</td>
       <td>—</td>
       <td>—</td>
       <td>Allows offline function except EMV card.</td>
@@ -6387,7 +6395,7 @@
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Issuers.AllowTypingCardNumber</code></td>
-      <td>Booleano</td>
+      <td>Boolean</td>
       <td>—</td>
       <td>—</td>
       <td>Allows the card number to be typed.</td>
@@ -6395,7 +6403,7 @@
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Issuers.MaskCardNumberUsingLast4Digits</code></td>
-      <td>Booleano</td>
+      <td>Boolean</td>
       <td>—</td>
       <td>—</td>
       <td>Print only the last 4 digits of the card.</td>
@@ -6403,7 +6411,7 @@
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Issuers.MaskCardNumberUsingFirst6AndLas4Digits</code></td>
-      <td>Booleano</td>
+      <td>Boolean</td>
       <td>—</td>
       <td>—</td>
       <td>Print the first 6 and last 4 digits of the card.</td>
@@ -6411,7 +6419,7 @@
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Issuers.AllowPrintCardHolderBalance</code></td>
-      <td>Booleano</td>
+      <td>Boolean</td>
       <td>—</td>
       <td>—</td>
       <td> </td>
@@ -6419,7 +6427,7 @@
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Issuers.AllowDisplayCardHolderBalance</code></td>
-      <td>Booleano</td>
+      <td>Boolean</td>
       <td>—</td>
       <td>—</td>
       <td>Allows the holder balance to be displayed.</td>
@@ -6427,7 +6435,7 @@
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Issuers.Option03BiAllowPrintingPartialCardNumberInReceipt07</code></td>
-      <td>Booleano</td>
+      <td>Boolean</td>
       <td>—</td>
       <td>—</td>
       <td>Allows partial printing of card number on transaction receipt.</td>
@@ -6435,7 +6443,7 @@
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Issuers.RestrictSaleWithDuplicateValueWhenPostdated</code></td>
-      <td>Booleano</td>
+      <td>Boolean</td>
       <td>—</td>
       <td>—</td>
       <td>Prevents duplicate value sales for pre-dating.</td>
@@ -6443,7 +6451,7 @@
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Issuers.RestrictSaleWithDuplicateValue</code></td>
-      <td>Booleano</td>
+      <td>Boolean</td>
       <td>—</td>
       <td>—</td>
       <td>Prevents sale with duplicate value.</td>
@@ -6451,7 +6459,7 @@
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Issuers.RequiresPassword</code></td>
-      <td>Booleano</td>
+      <td>Boolean</td>
       <td>—</td>
       <td>—</td>
       <td>Request password</td>
