[fd6df906ca227dd750b602933137ead23a20e512]: Update 2019-07-10-solucao-omni.md

--- a/en/manual/solucao-omni.html
+++ b/en/manual/solucao-omni.html
@@ -6465,6 +6465,102 @@
       <td>Request password</td>
       <td> </td>
     </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Issuers.InterpretsLastDigitOfSecurityCode</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Interprets the last digit of the service code.</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Issuers.RequiresPasswordExceptForEMVCard</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Request password, except for EMV card.</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Issuers.EnableAdditionalSecurityCodeOptions_Unreadable_NoCode</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Enables “Unreadable/Ilegível” and “Does Not Have/Não Possui” options for Security Code.</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Issuers.RequiresSecurityCodeWhenMagneticTrackIsRead</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Request the security code on track reading.</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Issuers.RequiresSecurityCodeWhenCardNumberIsTyped</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Request security code for card typed.</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Issuers.RequiresTypingLast4Digits</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Request the last 4 digits typed.</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Issuers.AllowCaptureOfFirstInstallmentValue</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allows capturing the value of the first installment.</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Issuers.AllowCaptureOfDownpaymentValue</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allows capture of the input value.</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Issuers.AllowGuaranteeHandling</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allows warranty treatment.</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Issuers.AllowPostdatingTheFirstInstallmentForSaleAndCDCQuery</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allows pre-dating the first installment for sale and CDC consultation.</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Issuers.AllowPostdating</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allows pre-dating.</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Issuers.AllowCDCSale</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allows CDC sale.</td>
+      <td> </td>
+    </tr>
   </tbody>
 </table>
 
