[96cb94ba38e88318a82febab53b3d8a59029bfd2]: Update 2019-07-10-solucao-omni.md

--- a/en/manual/solucao-omni.html
+++ b/en/manual/solucao-omni.html
@@ -6561,6 +6561,102 @@
       <td>Allows CDC sale.</td>
       <td> </td>
     </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Issuers.AllowFinancingByStore</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allows financing by the store.</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Issuers.AllowFinancingByCreditCardCompany</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Allows financing by the Administrator.</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Issuers.RequiresChipReader</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Requires the existence of the chip reader.</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Issuers.RequiresPinpad</code></td>
+      <td>Boolean</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Requires existence of the PIN-pad.</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Issuers.LimitDayforReversal</code></td>
+      <td>integer int32</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Data limite em dias para permitir Cancelamento.</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Issuers.LimitValueforReversal</code></td>
+      <td>String</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Valor máximo para Cancelamento.</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Issuers.LimitPercentforReversal</code></td>
+      <td>integer int64</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Maximum percentage for cancellation.</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Issuers.IssuerNameForDisplay</code></td>
+      <td>String</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Issuer Name for display.</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Issuers.IssuerNameForPrint</code></td>
+      <td>String</td>
+      <td>—</td>
+      <td>—</td>
+      <td>Issuer name for printing.</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">AidParameters</code></td>
+      <td>—</td>
+      <td>—</td>
+      <td>—</td>
+      <td>—</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">PublicKeys</code></td>
+      <td>—</td>
+      <td>—</td>
+      <td>—</td>
+      <td>—</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">InitializationVersion</code></td>
+      <td>—</td>
+      <td>—</td>
+      <td>—</td>
+      <td>—</td>
+      <td> </td>
+    </tr>
   </tbody>
 </table>
 
